# AgentBlaster

./: .gitignore  README.md  agentblaster.policy.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
campaigns/qwen-gemma-local/: README.md  campaign-handoff.json
docs/: README.md  agent-fanout.md  agent-profiles.md  artifact-schemas.md  audit.md  cache-control.md  cancellation.md  capabilities.md  capability-surfaces.md  dashboard.md  engine-targets.md  evidence-bundles.md  experiments.md  failure-taxonomy.md  harness-engineering.md  harness.md  launch-recipes.md  lcp-fixtures.md  metrics.md  models.md  observability.md  planning.md  prd.md  prompt-footprint.md  providers.md  readiness.md  release-qualification.md  reporting.md  reproducibility.md  retention.md  security-policy.md  security-scan.md  suite-governance.md  telemetry-normalization.md  testing.md  trace-replay.md  user-guide.md  workflow-surfaces.md
examples/: README.md
examples/matrices/: local-smoke.yaml  qwen-gemma-local.yaml  qwen-gemma-stress.yaml
examples/suites/: harness-contract-fuzz.yaml  mcp-wide.yaml  skills-prefill.yaml  smoke.yaml  streaming.yaml  structured.yaml  toolcall.yaml  toolsim.yaml  trace-replay.yaml
src/agentblaster/: __init__.py  adapters.py  agent_profiles.py  audit.py  benchmark_kit.py  bundle.py  campaign.py  campaign_preflight.py  capabilities.py  claim_readiness.py  cleanup.py  cli.py  compare.py  config.py  constants.py  contract_check.py  costs.py  dashboard.py  engine_advisory.py  engine_onboarding.py  engine_targets.py  environment.py  errors.py  evidence.py  evidence_index.py  experiment.py  exports.py  failures.py  fixtures.py  harness.py  implementation_status.py  integrity.py  launch_recipes.py  lcp.py  matrix.py  matrix_gate.py  matrix_pressure.py  matrix_saturation.py  mcp.py  metric_coverage.py  (+34 more)
tests/: test_adapters.py  test_agent_profiles.py  test_audit.py  test_benchmark_kit.py  test_bundle.py  test_cache_control.py  test_campaign.py  test_campaign_handoff.py  test_campaign_preflight.py  test_capabilities.py  test_claim_readiness.py  test_cleanup.py  test_cli.py  test_compare.py  test_config.py  test_contract_check.py  test_dashboard.py  test_dashboard_fixtures.py  test_engine_advisory.py  test_engine_onboarding.py  test_engine_targets.py  test_environment.py  test_evidence.py  test_evidence_index.py  test_examples.py  test_experiment.py  test_exports.py  test_failures.py  test_harness.py  test_implementation_status.py  test_integrity.py  test_launch_recipes.py  test_lcp.py  test_matrix.py  test_matrix_pressure.py  test_matrix_saturation.py  test_mcp.py  test_metric_coverage.py  test_mock_provider.py  test_model_catalog.py  (+32 more)
tests/gui/: chrome-dashboard-checklist.md  test_dashboard_playwright.py
