[project]
name = "agentblaster"
version = "0.1.0"
description = "Local agentic benchmark suite for MLX and OpenAI-compatible inference engines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "scouzi1966" }]
keywords = ["agentic-ai", "benchmark", "mlx", "openai-compatible", "anthropic-compatible", "local-llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
secrets = [
  "keyring>=25.0",
]
exports = [
  "pyarrow>=15.0",
]
reports = [
  "cairosvg>=2.7",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]
gui-test = [
  "playwright>=1.44",
]

[project.scripts]
agentblaster = "agentblaster.cli:app"

[project.urls]
Homepage = "https://github.com/scouzi1966/AgentBlaster"
Repository = "https://github.com/scouzi1966/AgentBlaster"
Issues = "https://github.com/scouzi1966/AgentBlaster/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentblaster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "unit: fast isolated tests for schemas, policies, normalization, scoring, and pure helpers",
  "contract: provider API shape tests using mocked or fixture responses",
  "integration: local integration tests for CLI, storage, reports, exports, and dashboard HTTP surfaces",
  "security: tests for redaction, policy enforcement, secret handling, and dashboard exposure controls",
  "gui: browser-driven dashboard tests; requires Playwright or Chrome/Codex plugin-assisted validation",
  "remote: opt-in tests that may call internet-facing provider APIs and require credentials",
  "slow: hardware-specific, large-fixture, or long-running tests",
  "packaging: source distribution, wheel, optional extras, and CLI entrypoint validation",
]
